--- a/static/css/base.css
+++ b/static/css/base.css
@@ -56,7 +56,7 @@ header {
   width: 100%;
 
 /* value for header as body's flex item */
-  align-self: flex-start;
+  margin-bottom: auto;
 
   background: var(--nonimp);
 }
@@ -65,12 +65,11 @@ header {
   margin: 50px 5px;
   padding: 0 10px;
 
-  flex-basis: 80%;
 }
 
 footer {
   font-size: 0.5rem;
   text-align: center;
 
-  valign: bottom;
+  margin-top: auto;
 }
