--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   {% if cssfile %}
     <link rel="stylesheet" href="/theme/css/{{ cssfile }}">
   {% else %}
-    <link rel="stylesheet" href="/theme/css/pages.css">
+    <link rel="stylesheet" href="/theme/css/base.css">
   {% endif %}
 
   <title>homepage</title>
@@ -16,13 +16,13 @@
 </head>
 
   <body>
-    <header>
+    <div id='header'>
       <a href="/">home</a>
       {% for p in pages %}
-	<a href="/{{ p.url }}" {% if p==page %} aria-current="page" {% endif %}>{{ p.slug }}</a>
+	    <a href="/{{ p.url }}" {% if p==page %} aria-current="page" {% endif %}>{{ p.slug }}</a>
       {% endfor %}
       <a href="/archives.html">blog</a>
-    </header>
+    </div>
     <!-- <button class="toggle_header" onclick="toggle_header()"></button> -->
 
     <div id="content">
@@ -30,10 +30,10 @@
       {% endblock %}
     </div>
 
-    <footer>
+    <div id='footer'>
       <p>Made with  &nbsp;by hv</p>
       <p>Wanna get in touch? <a href='mailto:hvstuff4@proton.me'>shoot me an email</a></p>
-    </footer>
+    </div>
 
   </body>
 </html>
